--- a/ChildGame/ChildGame.vcxproj
+++ b/ChildGame/ChildGame.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="triangles.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
