--- a/ChildGame/ChildGame.vcxproj.filters
+++ b/ChildGame/ChildGame.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="MatrixVector.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="triangles.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
