--- a/ChildGame/ChildGame.vcxproj
+++ b/ChildGame/ChildGame.vcxproj
@@ -177,6 +177,9 @@
     <Image Include="ChildGame.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
